--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "brochat",
   "version": "0.0.0",
-  "description": "Chat for bros",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "test"
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -16,6 +15,12 @@
     "url": "https://github.com/brochat/brochat/issues"
   },
   "dependencies": {
-    "express": "~4.13.3"
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "ejs": "~2.3.3",
+    "express": "~4.13.1",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
   }
 }
