--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "mongodb": "~2.0.48",
+    "bson": "~0.4.19",
+    "mongodb-core": "~1.2.21"
   }
 }
